# xclog

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: cliff.toml  test.yml
src/: build_settings.rs  compile.rs  lib.rs  logger.rs  parser2.rs  runner.rs
src/compile/: command.rs  flags.rs  mod.rs  tests.rs  util.rs
src/parser/: build_settings.rs  code_sign.rs  compile_asset_catalog.rs  compile_c.rs  compile_swift.rs  compile_swift_sources.rs  define.rs  defs.rs  description.rs  error.rs  gen.rs  generate.rs  invocation.rs  mod.rs  output.rs  patterns.rs  step.rs  util.rs
src/parser/manual/: mod.rs  util.rs
src/parser/manual/outputs/: build_failed.rs  code_sign.rs  compile_asset_catalog.rs  compile_c.rs  compile_storyboard.rs  compile_swift.rs  compile_swift_sources.rs  compile_xib.rs  copy_resource.rs  copy_swiftlibs.rs  create_build_directory.rs  emit_swift_module.rs  generate_dsym_file.rs  invocation.rs  ld.rs  merge_swift_module.rs  precompile_swift_bridging_header.rs  process_info_plist_file.rs  process_product_packaging.rs  register_with_launch_services.rs  resolved_source_packages.rs  script_execution.rs  validate.rs
src/parser/outputs/: code_sign.rs  compile_asset_catalog.rs  compile_c.rs  compile_storyboard.rs  compile_swift.rs  compile_swift_sources.rs  compile_xib.rs  copy_resource.rs  copy_swiftlibs.rs  create_build_directory.rs  emit_swift_module.rs  generate_dsym_file.rs  invocation.rs  ld.rs  link_storyboards.rs  merge_swift_module.rs  mod.rs  precompile_swift_bridging_header.rs  process_info_plist_file.rs  process_product_packaging.rs  register_execution_policy_exception.rs  register_with_launch_services.rs  resolved_source_packages.rs  script_execution.rs  validate.rs
src/parser/regex/: define.rs  generate.rs  mod.rs  output.rs
src/parser/step/: fmt.rs
src/parser/steps/: code_sign.rs  compile_asset_catalog.rs  compile_c.rs  compile_storyboard.rs  compile_swift.rs  compile_swift_sources.rs  compile_xib.rs  copy_resource.rs  copy_swiftlibs.rs  emit_swift_module.rs  generate_dsym_file.rs  invocation.rs  ld.rs  link_storyboards.rs  merge_swift_module.rs  mod.rs  precompile_swift_bridging_header.rs  process_info_plist_file.rs  process_product_packaging.rs  register_execution_policy_exception.rs  script_execution.rs  validate.rs
src/parser2/: pattern.rs
src/parser_old/: mod.rs  step.rs
src/parser_old/outputs/: code_sign.rs  compile_swift_sources.rs  invocation.rs  precompile_swift_bridging_header.rs
src/parser_old/step/: fmt.rs
tests/: case_a.rs  log_format.rs
