[package]
name = "xcodebuild"
version = "0.1.6"
edition = "2021"
description = "xcodebuild command wrapper, runner and log parser."
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
# Utilities
shell-words           = "1.1.0"
tap                   = "1.0.1"
thiserror             = "1.0.30"
regex                 = { version = "1.5", optional = true }
lazy_static           = { version = "1.4.0" }
derive-deref-rs       = "0.1.1"

# Async Runtime
tokio                 = {version = "1.18.0", features = [ "rt-multi-thread", "macros", "process"] } 
tokio-stream          = { version = "0.1.8", features = ["io-util"] }
parity-tokio-ipc      = "0.9.0" 
async-trait           = "0.1.52" 

# Tracing
tracing               = { version = "0.1.32", optional = true }
tracing-appender      = { version = "0.2.1",  optional = true }
tracing-subscriber    = { version = "0.3.9",  features = ["env-filter"], optional = true}

anyhow = "1.0.57"
async-stream = "0.3.3"
process-stream = "0.2.2"
paste = "1.0.7"

[dev-dependencies]
tracing-test = "0.2.1"

[features]
default = []
regex   = [ "dep:regex" ]
tracing = [ "dep:tracing", "tracing-appender", "tracing-subscriber" ]
