[package]
name = "xclog"
version = "0.2.1"
edition = "2021"
description = "xcodebuild build-log formater and parser"
license = "MIT OR Apache-2.0"

[dependencies]
# Utilities
shell-words           = "1.1.0"
tap                   = "1.0.1"
regex                 = "1.5"
lazy_static           = "1.4.0"
derive-deref-rs       = "0.1.1"

# Async Runtime
tokio                 = { version = "1.18.0", features = ["rt-multi-thread", "macros", "process", "fs"] }
tokio-stream          = { version = "0.1.8", features = ["io-util"] }
parity-tokio-ipc      = "0.9.0"
async-trait           = "0.1.52"

# Tracing
tracing               = { version = "0.1.32", optional = true }
tracing-appender      = { version = "0.2.1",  optional = true }
tracing-subscriber    = { version = "0.3.9",  features = ["env-filter"], optional = true}

anyhow = "1.0.57"
async-stream = "0.3.3"
process-stream = "0.2.2"
paste = "1.0.7"
derive_is_enum_variant = "0.1.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
lazy-regex = { version = "2.3.0", features = ["std"] }

[dev-dependencies]
tracing-test = "0.2.1"

[features]
default = [ "with_tracing" ]
with_tracing = [ "tracing", "tracing-appender", "tracing-subscriber" ]
